Added test to main